--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "pg": "^6.1.0",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1",
     "serve-favicon": "~2.3.0"
   }
 }
