--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
   },
   "dependencies": {
     "body-parser": "~1.15.1",
+    "chai": "^4.1.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "geojson-stream": "0.0.1",
     "jade": "~1.11.0",
+    "mocha": "^3.5.3",
     "morgan": "~1.7.0",
     "pg": "^6.1.0",
-    "request": "^2.81.0",
+    "request": "^2.83.0",
     "request-promise": "^4.2.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "supertest": "^3.0.0"
   },
   "devDependencies": {
     "mocha": "^3.5.3"
