--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "mocha test"
   },
   "dependencies": {
+    "async": "^2.5.0",
     "body-parser": "~1.15.1",
     "chai": "^4.1.2",
     "cookie-parser": "~1.4.3",
