--- a/package.json
+++ b/package.json
@@ -8,19 +8,23 @@
   },
   "dependencies": {
     "async": "^2.5.0",
-    "body-parser": "~1.15.1",
+    "body-parser": "^1.15.2",
     "chai": "^4.1.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.13.4",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
+    "debug": "^2.2.0",
+    "express": "^4.13.4",
+    "geojson": "^0.5.0",
     "geojson-stream": "0.0.1",
-    "jade": "~1.11.0",
-    "mocha": "^3.5.3",
-    "morgan": "~1.7.0",
+    "jade": "^1.11.0",
+    "js-string-escape": "^1.0.1",
+    "js2xmlparser": "^3.0.0",
+    "morgan": "^1.7.0",
     "pg": "^6.1.0",
+    "postgeo": "^0.1.2",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
-    "serve-favicon": "~2.3.0",
+    "serve-favicon": "^2.3.2",
     "supertest": "^3.0.0"
   },
   "devDependencies": {
