--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "async": "^2.5.0",
-    "bayes": "0.0.7",
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
     "cookie-parser": "^1.4.3",
@@ -23,12 +22,14 @@
     "js-string-escape": "^1.0.1",
     "js2xmlparser": "^3.0.0",
     "jsonfile": "^4.0.0",
+    "limdu": "^0.9.4",
     "mocha": "^3.5.3",
     "morgan": "^1.9.0",
     "pg": "^6.4.2",
     "postgeo": "^0.1.2",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
+    "serialization": "^0.2.0",
     "serve-favicon": "^2.4.5",
     "supertest": "^3.0.0",
     "supervisor": "^0.12.0"
